<resources>
    <string name="change_ava">Change Avatar</string>
    <string name="ava_ok">Done</string>
    <string name="choose_province">Pilih Provinsi</string>
    <string name="choose_city">Pilih Kota</string>
    <string name="choose_kec">Pilih Kecamatan</string>
    <string name="app_name">ShoutCap</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="action_cart">Cart</string>
    <string name="shout_id">ShoutID</string>
    <string-array name="province">
        <item>Province</item>
    </string-array>
    <string-array name="city">
        <item>CITY</item>
    </string-array>
    <string-array name="district">
        <item>District</item>
    </string-array>
    <string name="drawer_item_news">News</string>
    <string name="drawer_item_promo">Promo</string>
    <string name="drawer_item_create">Create</string>
    <string name="drawer_item_profile">Profile</string>
    <string name="drawer_item_inbox">Inbox</string>
    <string name="drawer_item_rack">Rack</string>
    <string name="drawer_item_cart">Cart</string>
    <string name="drawer_item_order">Order</string>
    <string name="drawer_item_reward">Reward</string>
    <string name="drawer_item_voucher">Voucher</string>
    <string-array name="settings_item_array">
        <item>Edit Profile</item>
        <item>Change Avatar</item>
        <item>Change Password</item>
        <item>About</item>
        <item>Sign Out</item>
    </string-array>
    <string-array name="help_item_array">
        <item>How to Order</item>
        <item>FAQ</item>
    </string-array>
    <string name="choose_model">Select Model</string>
    <string name="choose_category">Select Category</string>
    <string name="choose_font">Select Font</string>
    <string name="choose_font_color">Select Font Color</string>
    <string-array name="cap_model_list">
        <item>Trucker Cap</item>
        <item>Baseball Cap</item>
    </string-array>
    <string-array name="cap_trucker_list">
        <item>Classic</item>
        <item>Color</item>
        <item>Mixed</item>
    </string-array>
    <string-array name="cap_img_baseball_list">
        <item>baseball/img_cap_baseball_black_curved.jpg</item>
        <item>baseball/img_cap_baseball_black_straight.jpg</item>
        <item>baseball/img_cap_baseball_darkblue_curved.jpg</item>
        <item>baseball/img_cap_baseball_darkblue_straight.jpg</item>
        <item>baseball/img_cap_baseball_red_curved.jpg</item>
        <item>baseball/img_cap_baseball_red_straight.jpg</item>
    </string-array>
    <string-array name="cap_img_trucker_classic_list">
        <item>trucker_classic/img_cap_trucker_classic_black_curved.jpg</item>
        <item>trucker_classic/img_cap_trucker_classic_black_straight.jpg</item>
        <item>trucker_classic/img_cap_trucker_classic_blue_curved.jpg</item>
        <item>trucker_classic/img_cap_trucker_classic_blue_straight.jpg</item>
        <item>trucker_classic/img_cap_trucker_classic_darkblue_curved.jpg</item>
        <item>trucker_classic/img_cap_trucker_classic_darkblue_straight.jpg</item>
        <item>trucker_classic/img_cap_trucker_classic_green_curved.jpg</item>
        <item>trucker_classic/img_cap_trucker_classic_green_straight.jpg</item>
        <item>trucker_classic/img_cap_trucker_classic_orange_curved.jpg</item>
        <item>trucker_classic/img_cap_trucker_classic_orange_straight.jpg</item>
        <item>trucker_classic/img_cap_trucker_classic_purple_curved.jpg</item>
        <item>trucker_classic/img_cap_trucker_classic_purple_straight.jpg</item>
        <item>trucker_classic/img_cap_trucker_classic_red_curved.jpg</item>
        <item>trucker_classic/img_cap_trucker_classic_red_straight.jpg</item>
    </string-array>
    <string-array name="cap_img_trucker_color_list">
        <item>trucker_color/img_cap_trucker_color_black_curved.jpg</item>
        <item>trucker_color/img_cap_trucker_color_black_straight.jpg</item>
        <item>trucker_color/img_cap_trucker_color_blue_curved.jpg</item>
        <item>trucker_color/img_cap_trucker_color_blue_straight.jpg</item>
        <item>trucker_color/img_cap_trucker_color_darkblue_curved.jpg</item>
        <item>trucker_color/img_cap_trucker_color_darkblue_straight.jpg</item>
        <item>trucker_color/img_cap_trucker_color_green_curved.jpg</item>
        <item>trucker_color/img_cap_trucker_color_green_straight.jpg</item>
        <item>trucker_color/img_cap_trucker_color_orange_curved.jpg</item>
        <item>trucker_color/img_cap_trucker_color_orange_straight.jpg</item>
        <item>trucker_color/img_cap_trucker_color_purple_curved.jpg</item>
        <item>trucker_color/img_cap_trucker_color_purple_straight.jpg</item>
        <item>trucker_color/img_cap_trucker_color_red_curved.jpg</item>
        <item>trucker_color/img_cap_trucker_color_red_straight.jpg</item>
    </string-array>
    <string-array name="cap_img_trucker_mixed_list">
        <item>trucker_mixed/img_cap_trucker_mixed_blue_green_curved.jpg</item>
        <item>trucker_mixed/img_cap_trucker_mixed_blue_green_straight.jpg</item>
        <item>trucker_mixed/img_cap_trucker_mixed_blue_orange_curved.jpg</item>
        <item>trucker_mixed/img_cap_trucker_mixed_blue_orange_straight.jpg</item>
        <item>trucker_mixed/img_cap_trucker_mixed_blue_red_curved.jpg</item>
        <item>trucker_mixed/img_cap_trucker_mixed_blue_red_straight.jpg</item>
        <item>trucker_mixed/img_cap_trucker_mixed_green_blue_curved.jpg</item>
        <item>trucker_mixed/img_cap_trucker_mixed_green_blue_straight.jpg</item>
        <item>trucker_mixed/img_cap_trucker_mixed_green_orange_curved.jpg</item>
        <item>trucker_mixed/img_cap_trucker_mixed_green_orange_straight.jpg</item>
        <item>trucker_mixed/img_cap_trucker_mixed_orange_green_curved.jpg</item>
        <item>trucker_mixed/img_cap_trucker_mixed_orange_green_straight.jpg</item>
        <item>trucker_mixed/img_cap_trucker_mixed_red_blue_curved.jpg</item>
        <item>trucker_mixed/img_cap_trucker_mixed_red_blue_straight.jpg</item>
        <item>trucker_mixed/img_cap_trucker_mixed_red_green_curved.jpg</item>
        <item>trucker_mixed/img_cap_trucker_mixed_red_green_straight.jpg</item>
    </string-array>
    <string-array name="fonts_style_array">
        <item>Shoutcap</item>
        <item>Bangers</item>
        <item>Boogaloo</item>
        <item>Bubblegum Sans</item>
        <item>Fredoka One</item>
        <item>Graduate</item>
        <item>Sansita One</item>
    </string-array>
    <string-array name="fonts_name_array">
        <item>bubble.ttf</item>
        <item>bangers.ttf</item>
        <item>fredoka_one.ttf</item>
        <item>sansita_one.ttf</item>
        <item>boogaloo.ttf</item>
        <item>bubblegum_sans.ttf</item>
    </string-array>
    <string-array name="font_color_trucker_classic_array">
        <item>Black</item>
        <item>Red</item>
        <item>Orange</item>
        <item>Blue</item>
        <item>Dark Blue</item>
        <item>Green</item>
        <item>Violet</item>
    </string-array>
    <string-array name="font_color_trucker_color_array">
        <item>Black</item>
        <item>Red</item>
        <item>Orange</item>
        <item>Blue</item>
        <item>White</item>
        <item>Neon Green</item>
        <item>Neon Pink</item>
        <item>Neon Yellow</item>
        <item>Neon Orange</item>
        <item>Glow In The Dark</item>
        <item>Reflective</item>
        <item>Flock Black</item>
        <item>Flock Red</item>
        <item>Flock White</item>
    </string-array>
    <string-array name="font_color_trucker_mixed_array">
        <item>Black</item>
        <item>Red</item>
        <item>Orange</item>
        <item>Blue</item>
        <item>Dark Blue</item>
        <item>Green</item>
    </string-array>
    <string-array name="font_color_baseball_array">
        <item>Black</item>
        <item>Red</item>
        <item>White</item>
        <item>Neon Green</item>
        <item>Neon Pink</item>
        <item>Neon Yellow</item>
        <item>Neon Orange</item>
        <item>Glow In The Dark</item>
        <item>Reflective</item>
        <item>Flock Black</item>
        <item>Flock Red</item>
        <item>Flock White</item>
    </string-array>
    <string name="title_activity_sign">SignActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_promo">PromoActivity</string>
    <string name="title_activity_get_started">GetStartedActivity</string>
    <string name="title_activity_settings_content">SettingsContentActivity</string>
    <string name="title_activity_cart">CartActivity</string>
    <string-array name="provinsi">
        <item>Banten</item>
        <item>Jawa Barat</item>
        <item>Jawa Tengah</item>
        <item>Jawa Timur</item>
    </string-array>
    <string-array name="kota">
        <item>Banten</item>
        <item>Bandung</item>
    </string-array>
    <string-array name="kecamatan">
        <item>Regol</item>
        <item>Dayeuhkolot</item>
    </string-array>
    <string name="title_activity_preview">PreviewActivity</string>
    <string name="title_activity_order_confirmation">Order Confirmation</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_activity_create">Create Cap</string>
</resources>